# lean-spec-desktop

./: ARCHITECTURE.md  MIGRATION.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: tauri-build.yml  tauri-updater-release.yml
scripts/: build-sidecar.mjs  download-node.mjs  sync-ui-build.mjs
src/: App.tsx  Router.tsx  app.module.css  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: desktop-main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  keychain.rs  main.rs  menu.rs  projects.rs  shortcuts.rs  state.rs  tray.rs  ui_server.rs
src-tauri/src/specs/: commands.rs  constants.rs  dependencies.rs  frontmatter.rs  mod.rs  reader.rs  stats.rs  validation.rs
src/components/: DesktopLayout.tsx  DesktopMenu.tsx  ProjectCard.tsx  ProjectsManager.tsx  ProjectsTable.tsx  TitleBar.tsx  WindowControls.tsx  desktop-layout.module.css  desktop-menu.module.css  project-card.module.css  projects-manager.module.css  title-bar.module.css  window-controls.module.css
src/contexts/: DesktopProjectContext.tsx
src/hooks/: useProjects.ts  useProjectsManager.ts  useSpecs.ts
src/lib/: ipc.ts
src/pages/: DependenciesPage.tsx  SpecDetailPage.tsx  SpecsPage.tsx  StatsPage.tsx  dependencies-page.module.css  index.ts  spec-detail-page.module.css  specs-page.module.css  stats-page.module.css
