[package]
name = "leanspec-desktop"
version = "0.1.0"
edition = "2021"
description = "LeanSpec Desktop application"
authors = ["LeanSpec Team"]
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
dunce = "1.0"
hex = "0.4"
once_cell = "1.19"
parking_lot = "0.12"
portpicker = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }
tauri = { version = "1.6", features = [
  "api-all",
  "system-tray",
  "updater",
  "global-shortcut"
] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", package = "tauri-plugin-log" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", package = "tauri-plugin-window-state" }
walkdir = "2.5"
sha2 = "0.10"
uuid = { version = "1.10", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.6", features = [] }
